change css color and fix overflow problem

--- a/src/ComponentsCSS/chatPage.css
+++ b/src/ComponentsCSS/chatPage.css
@@ -13,8 +13,8 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-#wrapper-chat{
+#wrapper-chatside{
     width: 100%;
-    min-width: 500px;
+    height: 100%;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
